clean up after search-with-filters branch merge